--- a/index.html
+++ b/index.html
@@ -3,34 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css" />
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
+<div class="card">
+  <img class="perfume-image" src="images/image-product-desktop.jpg" alt="image-product-desktop" />
+  <div class="content">
+    <p class="perfume">PERFUME</p>
 
-  Preview
+    <h2>Gabrielle Essence Eau De Parfum</h2>
 
-  Gabrielle Essence Eau De Parfum
+    <p class="para">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+      Perfumer-Creator for the House of CHANEL.</p> 
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
+      <div class="prices">
+    <span class="price">$149.99</span> 
+    <span class="cut-price">$169.99</span>
+  </div>
   
+    <button><img class="cart" src="images/icon-cart.svg" alt="icon-cart">Add to Cart</button> 
+  </div>
+</div> 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Mitchell Owen</a>.
   </div>
 </body>
 </html>
